facebook authentication integrated

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -189,6 +189,8 @@ dependencies {
 
     implementation 'androidx.multidex:multidex:2.0.1'  // <-- ADD THIS DEPENDENCY
 
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
